--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- Google fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
   <!-- CSS styles -->
   <link rel="stylesheet" href="styles.css">
   <!-- Fontawesome -->
@@ -15,7 +19,7 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-light white-section">
+  <nav class="navbar white-section">
     <a class="navbar-brand" href="#">AZ Angličtina</a>
     <ul class="navbar-menu">
       <li class="nav-link">
@@ -39,6 +43,7 @@
           <h1>O mě</h1>
           <p class="about-text">Jmenuji se Adéla Zavadilová a studovat anglický jazyk jsem začala v roce 2005. Od té doby jsem získala certifikáty FCE a IELTS, a své znalosti jsem dále prohloubila prací a vyučováním ve Velké Británii. V roce 2011
             jsem začala v ČR pomáhat jednotlivcům a menším skupinám se studiem, přípravou na certifikáty, obchodní angličtinou a odbornými překlady.</p>
+          <a href="#contact"><button type="button" name="button" class="btn btn-light btn-lg">Napište mi</button></a>
         </div>
         <div class="col-md-6">
           <img class="portrait-img" src="images/portrait.png" alt="Portrait-img">
@@ -56,25 +61,39 @@
       <div class="features-heading">
         <h2>Služby</h2>
         <p class="features-description">Všechny mé kurzy zahrnují potřebné materiály pro výuku a obsahují gramatiku, poslech, mluvení, čtení i psaní. Doba jedné lekce je 60 min.</p>
+
       </div>
 
-      <div class="features-item">
-        <i class="fa-solid fa-user-large fa-pull-left big-icon"></i>
-        <h3>Dospělí i děti</h3>
-        <p class="features-text">Doučuji děti přípravující se školy, ale i dospělé, kteří se chtějí naučit anglicky. Naučím vás základy jazyka, pomůžu s dohnáním látky, přípravím vás na zkoušky a certifikáty a děti budou zábavnou formou poznávat nový
-          jazyk.</p>
+      <div class="row features-item">
+        <div class="col-lg-2">
+          <i class="fa-solid fa-user-large big-icon"></i>
+        </div>
+        <div class="col-lg-10">
+          <h3>Dospělí i děti</h3>
+          <p class="features-text">Doučuji děti přípravující se školy, ale i dospělé, kteří se chtějí naučit anglicky. Naučím vás základy jazyka, pomůžu s dohnáním látky, přípravím vás na zkoušky a certifikáty a děti budou zábavnou formou poznávat
+            nový jazyk.</p>
+        </div>
+
       </div>
 
-      <div class="features-item">
-        <i class="fa-solid fa-building fa-pull-left big-icon"></i>
-        <h3>Pro firmy</h3>
-        <p class="features-text">Nabídněte vašim zaměstnancům další benefit v podobě kurzů obchodní angličtiny. Služby mohu poskytnout v prostorách Vaší firmy, takže zaměstnanci mohou zůstat na blízku svému pracovišti</p>
+      <div class="row features-item">
+        <div class="col-lg-2">
+          <i class="fa-solid fa-building big-icon"></i>
+        </div>
+        <div class="col-lg-10">
+          <h3>Pro firmy</h3>
+          <p class="features-text">Nabídněte vašim zaměstnancům další benefit v podobě kurzů obchodní angličtiny. Služby mohu poskytnout v prostorách Vaší firmy, takže zaměstnanci mohou zůstat na blízku svému pracovišti</p>
+        </div>
       </div>
 
-      <div class="features-item">
-        <i class="fa-solid fa-book fa-pull-left big-icon"></i>
-        <h3>Překlady na míru</h3>
-        <p class="features-text">Poskytuji odborné překlady bakalářských prací, esejí nebo překlady pro vaše klienty. Cena dohodou dle zadání.</p>
+      <div class="row features-item">
+        <div class="col-lg-2">
+          <i class="fa-solid fa-book big-icon"></i>
+        </div>
+        <div class="col-lg-10">
+          <h3>Překlady na míru</h3>
+          <p class="features-text">Poskytuji odborné překlady bakalářských prací, esejí nebo překlady pro vaše klienty. Cena dohodou dle zadání.</p>
+        </div>
       </div>
     </div>
 
@@ -85,56 +104,36 @@
     <div class="container-fluid">
       <h2>Ceník</h2>
       <div class="row">
-
-
         <div class="col-lg-3 col-md-6">
-          <div class="card">
-            <div class="card-header">
-              <h3 class="card-title">1 osoba</h3>
-            </div>
-            <div class="card-body">
-              <p class="card-text">250 Kč / 60 min</p>
-              <button type="button" name="button">Objednat</button>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="col-lg-3 col-md-6">
-          <div class="card">
-            <div class="card-header">
-              <h3 class="card-title">1 osoba</h3>
-            </div>
-            <div class="card-body">
-              <p class="card-text">250 Kč / 60 min</p>
-              <button type="button" name="button">Objednat</button>
-            </div>
-          </div>
+          <i class="fa-solid fa-user fa-2x"></i>
+          <h3>1 osoba</h3>
+          <p>250 Kč / 60 min</p>
         </div>
 
         <div class="col-lg-3 col-md-6">
-          <div class="card">
-            <div class="card-header">
-              <h3 class="card-title">1 osoba</h3>
-            </div>
-            <div class="card-body">
-              <p class="card-text">250 Kč / 60 min</p>
-              <button type="button" name="button">Objednat</button>
-            </div>
-          </div>
+          <i class="fa-solid fa-user fa-2x"></i>
+          <i class="fa-solid fa-user fa-2x"></i>
+          <h3>2 osoby</h3>
+          <p>350 Kč / 60 min</p>
         </div>
 
         <div class="col-lg-3 col-md-6">
-          <div class="card">
-            <div class="card-header">
-              <h3 class="card-title">1 osoba</h3>
-            </div>
-            <div class="card-body">
-              <p class="card-text">250 Kč / 60 min</p>
-              <button type="button" name="button">Objednat</button>
-            </div>
-          </div>
+          <i class="fa-solid fa-user fa-2x"></i>
+          <i class="fa-solid fa-user fa-2x"></i>
+          <i class="fa-solid fa-user fa-2x"></i>
+          <h3>3 osoby</h3>
+          <p>450 Kč / 60 min</p>
         </div>
+
+        <div class="col-lg-3 col-md-6">
+          <i class="fa-solid fa-user fa-2x"></i>
+          <i class="fa-solid fa-user fa-2x"></i>
+          <i class="fa-solid fa-user fa-2x"></i>
+          <i class="fa-solid fa-user fa-2x"></i>
+          <h3>4 osoby</h3>
+          <p class="pricing-text">550 Kč / 60 min</p>
+        </div>
+
       </div>
     </div>
   </section>
@@ -147,7 +146,7 @@
 
       <ul class="contact-list">
         <li>+420 736 666 281</li>
-        <li><a href="mailto: adelie.uk@gmail.com">adelie.uk@gmail.com<a/></li>
+        <li><a href="mailto: adelie.uk@gmail.com">adelie.uk@gmail.com<a /></li>
         <li>Primátorská 297 , Velvary 27324</li>
         <li>IČ 14239990</li>
       </ul>
